name:                blog-tutorial
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/nomicflux/servant-opaleye-tutorial
license:             BSD3
license-file:        LICENSE
author:              Michael Anderson
maintainer:          nomicflux@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , App
                     , Api.User
                     , Api.BlogPost
                     , Models.User
                     , Models.BlogPost
                     , Queries.User
                     , Queries.BlogPost
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , either
                     , datetime
                     , opaleye
                     , product-profunctors
                     , bytestring
                     , postgresql-simple
                     , transformers
  default-language:    Haskell2010

executable blog-tutorial-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , blog-tutorial
  default-language:    Haskell2010

test-suite blog-tutorial-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blog-tutorial
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blog-tutorial
